feat(backend): add serving sizes to recipe data